--- a/css/input.css
+++ b/css/input.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "YekanBakh";
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-04-Regular.woff") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "YekanBakh";
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-05-Medium.woff") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "YekanBakh";
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-06-Bold.woff") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "YekanBakh";
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-07-Heavy.woff") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "YekanBakh";
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-08-Fat.woff") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
