--- a/css/output.css
+++ b/css/output.css
@@ -1793,11 +1793,6 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity, 1));
@@ -2434,6 +2429,56 @@ video {
 
 .forced-color-adjust-none {
   forced-color-adjust: none;
+}
+
+@font-face {
+  font-family: "YekanBakh";
+
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-04-Regular.woff") format("woff2");
+
+  font-weight: 400;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "YekanBakh";
+
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-05-Medium.woff") format("woff2");
+
+  font-weight: 500;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "YekanBakh";
+
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-06-Bold.woff") format("woff2");
+
+  font-weight: 600;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "YekanBakh";
+
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-07-Heavy.woff") format("woff2");
+
+  font-weight: 700;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "YekanBakh";
+
+  src: url("../fonts/YekanBakh/Yekan-Bakh-FaNum-08-Fat.woff") format("woff2");
+
+  font-weight: 700;
+
+  font-style: normal;
 }
 
 @media (min-width: 640px) {
